--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ruff pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        # Install package with dependencies
+        python -m pip install -e .
     - name: Lint with ruff
       run: |
         # Run ruff linter
