--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 dependencies = [
     "openai>=1.0.0",
     "jsonschema>=4.0.0",
+    "immutables>=0.21",
 ]
 
 [project.optional-dependencies]
