--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,9 +27,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ruff pytest
-        # Install package with dependencies
-        python -m pip install -e .
+        # Install package with dev dependencies (includes pytest, pytest-cov, ruff, etc.)
+        python -m pip install -e ".[dev]"
     - name: Lint with ruff
       run: |
         # Run ruff linter
