--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ version = "0.2.0"
 description = "A stateful, hierarchical multi-agent tool framework under the Bestla namespace"
 readme = "README.md"
 requires-python = ">=3.10"
-license = {text = "MIT"}
+license = {text = "Modified MIT License"}
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: Other/Proprietary License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
